Fixed annoying "jump" issue

--- a/css/analysis/index.css
+++ b/css/analysis/index.css
@@ -26,7 +26,7 @@
         width: 100%;
         height: 25px;
         line-height: 25px;
-        margin-bottom: 16px;
+        margin: 8px 0;
         float: left;
         border: 1px solid #dedfe3;
         border-radius: 6px;
@@ -65,7 +65,6 @@
 
     #accordion > div {
         width: 100%;
-        margin-bottom: 16px;
         float: left;
     }
 
